# claim-rush

./: .gitignore  CLAUDE.md  UPA_Portal_Manual_Vol1_Getting_Started.docx  UPA_Portal_Manual_Vol2_Intelligence.docx  UPA_Portal_Manual_Vol3_Sales_Outreach.docx  UPA_Portal_Manual_Vol4_Operations_Admin.docx  UPA_Portal_Manual_Vol5_Advanced_Features.docx  ca-screenshot.js
upa-portal/backend/app/: celery-beat-start.sh  celery-worker-start.sh  celery_config.py  pyproject.toml  seed_admin.py  test_argument_engine.py  test_blackout_engine.py  test_carrier_payments.py  test_claim_recovery.py  test_full_ui_pipeline.py  test_policy_e2e.py  test_supplement_engine.py
upa-portal/backend/app/alembic/: env.py
upa-portal/backend/app/alembic/versions/: 0514cbb4602d_create_waitlist_table.py  0702431c1065_.py  08c0c5793874_merge_3bc95734f6ba_and_9dbc221c4038.py  08ca46ffb4bc_.py  0dcf7ae09211_.py  0eb011fb4741_update_waitlist_structure_for_new_.py  10fbe5cbcb06_.py  1336c407a174_add_login_attempt_user_passkey_magic_.py  14707ea696fd_.py  16a67549a22f_.py  18d135d73ec8_.py  1a2a7e5548be_merge_heads.py  1c24cd87829a_add_cp_and_adjuster_capacity_to_.py  1fcca9990f31_.py  20ddbb3f02b7_add_agent_availability_fields.py  20ec4f11f5af_.py  21cbb3ac45b3_.py  220885b760da_create_storm_intelligence_tables.py  2765cfe40281_.py  28ec2678e5c5_.py  2f4ab6e30835_.py  2ff3193dc6e8_.py  32e5974e9f66_.py  338329e82590_.py  344405662316_.py  35fed1910100_add_action_type_to_skiptrace_transaction.py  3bc95734f6ba_.py  3df5164b9f31_.py  40c9f204f3c6_.py  411a327610dc_.py  4664d37db095_.py  46cb61e8ec92_.py  47a0a214487b_merge_heads.py  4c52f44a8aba_add_lead_type_flags_to_territory.py  4d1cf2304bda_.py  54fb8d090549_create_user_and_user_meta_tables.py  583d7a2d08ee_.py  5a3972e01a6b_.py  5b51755845c9_.py  5f64f38b3836_.py  (+135 more)
upa-portal/backend/app/app/: initial_data.py  main.py  tests_pre_start.py  worker.py
upa-portal/backend/app/app/config/: advance_schedule.py  estimate_divergence.py
upa-portal/backend/app/app/core/: brute_force.py  celery_app.py  challenge_store.py  config.py  enums.py  exception_handlers.py  log.py  rate_limit.py  rbac.py  read_params_attrs.py  response_manager.py  security.py
upa-portal/backend/app/app/crud/: __init__.py  base.py  crud_account.py  crud_account_detail.py  crud_adjuster_availability.py  crud_adjuster_case.py  crud_announcement.py  crud_announcement_activity.py  crud_announcement_file.py  crud_business_email.py  (+104 more)
upa-portal/backend/app/scripts/: all_pulsepoint_agencies.json  backfill_structured_addresses.py  backfill_zip_from_latlng.py  celery-local.sh  create_fire_tables.py  discover_pulsepoint_agencies.py  entrypoint-prod.sh  format-imports.sh  lint.sh  seed_agencies_local.py  seed_all_agencies.py  seed_commission_engine.py  seed_role_test_users.py  sherpa_coverage_probe.py
upa-portal/backend_backup/app/: .coveragerc  .flake8  celery-worker-start.sh  pyproject.toml  tests-start.sh
upa-portal/backend_backup/app/app/: main.py  worker.py
upa-portal/backend_backup/app/scripts/: entrypoint-dev.sh  entrypoint-prod.sh  format.sh  test.sh
(+2242 files in other folders)
